portal/kubernetes/mashroom-portal-deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mashroom-portal
    namespace: default
spec:
    replicas: 2
    selector:
        matchLabels:
            app: mashroom-portal
    template:
        metadata:
            labels:
                app: mashroom-portal
        spec:
            serviceAccountName: mashroom-portal
            containers:
                -   name: mashroom-portal
                    image: gcr.io/${PROJECT_ID}/mashroom-portal:${npm_package_version}
                    imagePullPolicy: Always
                    resources:
                        requests:
                            cpu: 100m
                            memory: 120Mi
                    ports:
                        -   containerPort: 5050
                    readinessProbe:
                        httpGet:
                            path: /mashroom/health/ready
                            port: 5050
                        initialDelaySeconds: 5
                        periodSeconds: 5
