portal/kubernetes/mashroom-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mashroom-portal
    namespace: default
    labels:
        app: mashroom-portal
spec:
    type: LoadBalancer
    ports:
        -   port: 80
            targetPort: 5050
    selector:
        app: mashroom-portal
