portal/kubernetes/mashroom-portal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mashroom-portal-ingress
    namespace: default
    annotations:
        kubernetes.io/ingress.global-static-ip-name: portal-global-ip
spec:
    backend:
        serviceName: mashroom-portal
        servicePort: 80
